# cookiecutter-fastapi-backend

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS  LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: main.yml  pr.yml  pre-commit.yml  test.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/getting_started/: quickstart.rst
docs/source/package_info/: acknowledgements.rst  contributing.rst  references.rst
docs/source/project_features/: alembic.rst  celery.rst  ci_cd.rst  common.rst  deploy.rst  sqlmodel.rst
docs/source/project_features/deployments/: digitalocean.rst  platformsh.rst  render.rst
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py  test_docker_build.sh  test_hooks.py
{{ cookiecutter.__project_slug }}/: .env_example  README.md  digitalocean.yaml  docker-compose.yml  render.yaml
{{ cookiecutter.__project_slug }}/.github/workflows/: pr.yml
{{ cookiecutter.__project_slug }}/{{ cookiecutter.backend_container_name }}/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
{{ cookiecutter.__project_slug }}/{{ cookiecutter.backend_container_name }}/src/: main.py
{{ cookiecutter.__project_slug }}/{{ cookiecutter.backend_container_name }}/src/api/: deps.py  routes.py
{{ cookiecutter.__project_slug }}/{{ cookiecutter.backend_container_name }}/src/api/v1/: health.py
{{ cookiecutter.__project_slug }}/{{ cookiecutter.backend_container_name }}/src/core/: enums.py  exceptions.py
{{ cookiecutter.__project_slug }}/{{ cookiecutter.backend_container_name }}/src/db/: init_db.py
{{ cookiecutter.__project_slug }}/{{ cookiecutter.backend_container_name }}/src/interfaces/: repository.py
{{ cookiecutter.__project_slug }}/{{ cookiecutter.backend_container_name }}/src/migrations/: env.py
{{ cookiecutter.__project_slug }}/{{ cookiecutter.backend_container_name }}/tests/: test_routes.py
{{ cookiecutter.project_slug }}/: .dockerignore  .env_example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  digitalocean.yaml  docker-compose.yml  render.yaml
{{ cookiecutter.project_slug }}/.github/workflows/: build.yml  deploy.yml  lint.yml  main.yml  pr.yml  unit-tests.yml
{{ cookiecutter.project_slug }}/ops/: docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.test.yml
{{ cookiecutter.project_slug }}/{{ cookiecutter.backend_container_name }}/: .dockerignore  .flake8  Dockerfile  fly.toml  logconfig.yml  pyproject.toml  requirements-dev.txt  requirements.txt
{{ cookiecutter.project_slug }}/{{ cookiecutter.backend_container_name }}/src/: __init__.py  main.py  worker.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.backend_container_name }}/src/api/: deps.py  routes.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.backend_container_name }}/src/api/v1/: health.py  meme.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.backend_container_name }}/src/core/: config.py  enums.py  exceptions.py  tasks.py  utils.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.backend_container_name }}/src/db/: init_db.py  session.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.backend_container_name }}/src/db/clients/: pg_client.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.backend_container_name }}/src/interfaces/: repository.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.backend_container_name }}/src/migrations/: env.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.backend_container_name }}/src/migrations/versions/: 3577cec8a2bb_init.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.backend_container_name }}/src/models/: __init__.py  base.py  meme.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.backend_container_name }}/src/repositories/: base.py  meme.py  sqlalchemy.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.backend_container_name }}/src/schemas/: common.py  meme.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.backend_container_name }}/tests/: test_routes.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.nginx_container_name }}/: Dockerfile  docker-entrypoint.sh
{{ cookiecutter.project_slug }}/{{ cookiecutter.nginx_container_name }}/templates/: nginx.conf.j2  site.conf.j2
