[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cookiecutter-fastapi-backend"
version = "0.4.1"
description = "Cookiecutter template to build and deploy fastapi backends..batteries included"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "cookiecutter==2.6.0",
    "pytest==8.3.3",
    "pytest-cookies==0.7.0",
    "sh==2.0.7",
    "binaryornot==0.4.4",
    "pre-commit==3.8.0",
    "pytest-instafail==0.5.0"
]

[tool.ruff]
line-length = 100
exclude = [".git", "__pycache__", ".mypy_cache", ".pytest_cache"]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "B904",
    "B006",
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
