[tool.poetry]
name = "cookiecutter-fastapi-backend"
version = "1.0.1"
description = "Cookiecutter template to build and deploy fastapi backends..batteries included"
authors = ["nickatnight <nialexanderke@proton.me>"]
readme = "README.md"
packages = []
homepage = "https://github.com/nickatnight/cookiecutter-fastapi-backend"
repository = "https://github.com/nickatnight/cookiecutter-fastapi-backend"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
cookiecutter = "2.6.0"
pytest = "8.3.3"
pytest-cookies = "0.7.0"
sh = "2.0.7"
binaryornot = "0.4.4"
pre-commit = "3.8.0"
pytest-instafail = "0.5.0"

[tool.ruff]
line-length = 100
exclude = [".git", "__pycache__", ".mypy_cache", ".pytest_cache"]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "B904",
    "B006",
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
