[project]
name = "cookiecutter-fastapi-backend"
version = "2.2.0"
description = "Cookiecutter template to build and deploy fastapi backends..batteries included"
authors = [{ name = "nickatnight", email = "nialexanderke@proton.me" }]
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "cookiecutter==2.6.0",
]
classifiers = [
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators"
]

[project.urls]
Homepage = "https://github.com/nickatnight/cookiecutter-fastapi-backend"
Repository = "https://github.com/nickatnight/cookiecutter-fastapi-backend"

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-cookies==0.7.0",
    "sh==2.0.7",
    "binaryornot==0.4.4",
    "pre-commit==3.8.0",
    "pytest-instafail==0.5.0",
    "sphinx==7.4.7",
    "sphinx-rtd-theme==3.0.1",
    "sphinx-rtd-dark-mode==1.3.0",
    "tomli==2.2.1",
    "typing-extensions==4.14.0"
]

[tool.uv]
required-version = ">=0.7.18"

[tool.ruff]
line-length = 100
exclude = [".git", "__pycache__", ".mypy_cache", ".pytest_cache"]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "B904",
    "B006",
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
