[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "1.0.0"
description = "Base project for building fastapi backends"
authors = ["nickatnight <nickkelly.858@gmail.com>"]

[tool.poetry.dependencies]
python = "~{{ cookiecutter.py_version }}"
alembic = "1.13.2"
sqlalchemy = "2.0.34"
psycopg = {extras = ["binary"], version = "3.1.13"}
fastapi = "0.114.0"
pydantic-settings = "2.4.0"
sqlmodel = "0.0.21"
{%- if cookiecutter.use_celery == "yes" %}
redis = "4.6.0"
fastapi-cache2 = {extras = ["redis"], version = "0.2.2"}{%- endif %}
uvicorn = {extras = ["standard"], version = "0.23.2"}
PyYAML = "6.0.1"
httpx = "0.25.0"
gunicorn = "23.0.0"
{%- if cookiecutter.use_celery == "yes" %}celery = {extras = ["beat"], version = "5.2.7"}{%- endif %}

[tool.poetry.dev-dependencies]
black = "25.1.0"
isort = "6.0.1"
pytest = "8.3.3"
pytest-cov = "5.0.0"
pytest-mock = "3.14.0"
mypy = "1.16.1"
ruff = "0.12.2"
requests = "2.32.3"
sqlalchemy-stubs = "0.4"

[tool.isort]
multi_line_output = 3
lines_after_imports = 2
line_length = 88
include_trailing_comma = true
sections = 'FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER'

[tool.black]
line-length = 100
include = '\.pyi?$'
extend-exclude = '''
(
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)
'''

[tool.ruff]
line-length = 100
exclude = [".git", "__pycache__", ".mypy_cache", ".pytest_cache", "migrations"]
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
lint.ignore = [
    "B904",
    "B006",
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.codespell]
ignore-words-list = 'selectin,THIRDPARTY'

[tool.coverage.report]
fail_under = 20

[tool.coverage.run]
omit = ['*tests/*']

[tool.mypy]
exclude = ["migrations/"]
# --strict
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
# --strict end

[[tool.mypy.overrides]]
module = [
    "fastapi_cache.*",
    "redis.*"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
