[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "Base project for building fastapi backends"
maintainers = [
  {name = "{{ cookiecutter.github_username }}", email = "{{ cookiecutter.author_email }}"}
]
requires-python = ">={{ cookiecutter.py_version }}"
readme = "README.md"
dependencies = [
    "alembic==1.13.2",
    "sqlalchemy==2.0.41",
    "psycopg[binary]==3.1.13",
    "fastapi==0.116.1",
    "pydantic-settings==2.10.1",
    "sqlmodel==0.0.24",
    {%- if cookiecutter.use_celery == "yes" and cookiecutter.periodic_tasks == "yes" %}
    "redis==6.2.0",
    "celery[beat,redis]==5.2.7",
    {%- elif cookiecutter.use_celery == "yes" %}
    "redis==6.2.0",
    "celery[redis]==5.2.7",{%- endif %}
    "uvicorn[standard]==0.35.0",
    "PyYAML==6.0.1",
    "httpx==0.28.1",
    "gunicorn==23.0.0",
    {%- if cookiecutter.use_sentry == "yes" %}
    "sentry-sdk[fastapi]==2.33.0",{%- endif %}
]

[dependency-groups]
dev = [
    "black==25.1.0",
    "isort==6.0.1",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "mypy==1.16.1",
    "ruff==0.12.2",
    "requests==2.32.3",
    "sqlalchemy-stubs==0.4"
]

[tool.isort]
multi_line_output = 3
lines_after_imports = 2
line_length = 88
include_trailing_comma = true
sections = 'FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER'

[tool.black]
line-length = 100
include = '\.pyi?$'
extend-exclude = '''
(
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)
'''

[tool.ruff]
line-length = 100
exclude = [".git", "__pycache__", ".mypy_cache", ".pytest_cache", "migrations"]
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
lint.ignore = [
    "B904",
    "B006",
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.codespell]
ignore-words-list = 'selectin,THIRDPARTY'

[tool.coverage.report]
fail_under = 20

[tool.coverage.run]
omit = ['*tests/*']

[tool.mypy]
exclude = ["migrations/"]
# --strict
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
# --strict end

[[tool.mypy.overrides]]
module = [
    "fastapi_cache.*",
    "redis.*",
    "celery.*",
]
ignore_missing_imports = true
